--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,31 @@ build/
 /.project
 
 version.cache
+
+.vscode*
+5G-Scenario1.xml
+RxPacketTrace.txt
+RxedGnbMacCtrlMsgsTrace.txt
+RxedGnbPhyCtrlMsgsTrace.txt
+RxedUeMacCtrlMsgsTrace.txt
+RxedUePhyCtrlMsgsTrace.txt
+RxedUePhyDlDciTrace.txt
+SinrTrace.txt
+TxedGnbMacCtrlMsgsTrace.txt
+TxedGnbPhyCtrlMsgsTrace.txt
+TxedUeMacCtrlMsgsTrace.txt
+TxedUePhyCtrlMsgsTrace.txt
+UE-REM.txt
+animation.xml
+consolidate.py
+eNB-REM.txt
+graphs/
+lena-mec.rem
+lena-simple-epc.xml
+my_plot_script
+nr-rem-2-UEs-ues.txt
+ns3.sh
+ns3_multiple.sh
+outputProva1
+plot.sh
+transferFile.txt
