Added graph submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "contrib/nr"]
 	path = contrib/nr
 	url = https://github.com/LucaVignati/nr.git
+[submodule "graphs"]
+	path = graphs
+	url = https://github.com/LucaVignati/graphs.git
