Aggregated the 4 Scenarios into one file
- Added the new aggregated scenario "4G-5G_comparison.cc"
- Deleted the 4 previous scenarios "[4G/5G]-Scenario[1/2].cc"
- Created the temporary Scenario1.cc and Scenario2.cc for the transition
(to be eliminated at the next commit)
- Enabled the shadowing

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -96,8 +96,17 @@
             "type": "cppdbg",
             "request": "launch",
             //"program": "${workspaceFolder}/build/utils/ns3-dev-test-runner-debug",
-            "program": "${workspaceFolder}/build/scratch/5G-Scenario1",
-            "args": ["--numberOfueNodes=4", "--radius=150", "--height=1.5", "--seed=136", "--simTime=14", "--nPackets=18783", "--interPacketInterval=0.0006666666666666666", "--numerology=2"],
+            "program": "${workspaceFolder}/build/scratch/4G-5G_comparison",
+            "args": ["--numberOfueNodes=4",
+                     "--radius=150",
+                     "--height=1.5",
+                     "--seed=0",
+                     "--simTime=14",
+                     "--nPackets=18783",
+                     "--interPacketInterval=0.0006666666666666666",
+                     "--generation=5G",
+                     "--scenario=1",
+                     "--numerology=2"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
