--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,22 +4,73 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
-            "name": "(gdb) Launch from scratch",
+            "name": "Python: Current File",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "args": ["--gen", "4G",
+                    "--scenario", "1",
+                    "--radius", "150",
+                    "--height", "1.5",
+                    //"--num", "2",
+                    //"--neNBs", "3",
+                    "--limitPackets",
+                    "--iterate", "numberOfueNodes", "2:2:10",
+                    "--threads", "30",
+                    "--rand", "60",
+                    //"--seeds", "/home/vignati/NS3/graphs/summary/5G-Scenario2-rand60.txt",
+                    "-P",
+                    "--traffic",
+                    //"--dry",
+                    //"-f"
+                    "--path", "4G-scenario1-Shadowing-ON",
+                    "--no-wait",
+                    ],
+        },
+        {
+            "name": "(gdb) Pipe Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/scratch/ns3-dev-${fileBasenameNoExtension}-debug",
-            "args": [],
+            //"program": "${workspaceFolder}/build/utils/ns3-dev-test-runner-debug",
+            "program": "${workspaceFolder}/build/scratch/ns3.36-4G-5G_comparison-default",
+            "args": [
+                "--numberOfueNodes=2",
+                "--radius=150",
+                "--height=1.5",
+                "--seed=279",
+                "--simTime=7",
+                "--nPackets=9408",
+                "--interPacketInterval=0.0006666666666666666",
+                "--traffic",
+                "--generation=4G",
+                "--numberOfenbNodes=1",
+                "--scenario=1",
+                "--numerology=2"
+            ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
-            "preLaunchTask": "Build",
-            "environment": [
-                {
-                    "name": "LD_LIBRARY_PATH",
-                    "value": "${workspaceFolder}/build/lib/"
-                }
-            ],
+            "environment": [],
             "externalConsole": false,
+            "pipeTransport": {
+                "debuggerPath": "", // leave blank
+                "pipeProgram": "${workspaceFolder}/ns3",
+                // pipeArgs is essentially the entire waf command line arguments                
+                "pipeArgs": [
+                    "run",
+                    "4G-5G_comparison", // Run call with the filename
+                    "--command-template",
+                    "\"", // opening double quote for command template 
+                    "${debuggerCommand}", // gdb path and --interpreter arg already in debuggerCommand 
+                    "--args",
+                    "%s", // Need to add --args %s to the gdb call
+                    "\"", // closing quote for command template
+                ],
+                "quoteArgs": false,
+                "pipeCwd": ""
+            },
             "MIMode": "gdb",
             "setupCommands": [
                 {
@@ -28,67 +79,6 @@
                     "ignoreFailures": true
                 }
             ]
-         },
-         {
-            "name": "(lldb) Launch from scratch",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}/build/scratch/ns3-dev-${fileBasenameNoExtension}-debug",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
-            "preLaunchTask": "Build",
-            "environment": [
-                {
-                    "name": "LD_LIBRARY_PATH",
-                    "value": "${workspaceFolder}/build/lib/"
-                }
-            ],
-            "externalConsole": false,
-            "MIMode": "lldb"
-         },
-         {
-            "name": "(gdb) Launch testrunner",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}/build/utils/ns3-dev-test-runner-debug",
-            "args": ["--suite=${selectedText}"],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
-            "preLaunchTask": "Build",
-            "environment": [
-                {
-                    "name": "LD_LIBRARY_PATH",
-                    "value": "${workspaceFolder}/build/lib/"
-                }
-            ],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ]
-         },
-         {
-            "name": "(lldb) Launch testrunner",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}/build/utils/ns3-dev-test-runner-debug",
-            "args": ["--suite=${selectedText}"],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
-            "preLaunchTask": "Build",
-            "environment": [
-                {
-                    "name": "LD_LIBRARY_PATH",
-                    "value": "${workspaceFolder}/build/lib/"
-                }
-            ],
-            "externalConsole": false,
-            "MIMode": "lldb"
-         }
+        },
     ]
 }
