- Default RLC value set to smaller value - Range for random start value set to 0.5s instead of 1s - Changed folder structure for results - Added the NS3Pipelines submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "contrib/nr"]
 	path = contrib/nr
 	url = https://github.com/LucaVignati/nr.git
+[submodule "NS3Pipelines"]
+	path = NS3Pipelines
+	url = https://github.com/LucaVignati/NS3Pipelines.git
