--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,31 +4,52 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args": ["--gen", "4G",
-                    "--scenario", "1",
-                    "--radius", "150",
-                    "--height", "1.5",
-                    //"--num", "2",
-                    //"--neNBs", "3",
-                    "--limitPackets",
-                    "--iterate", "numberOfueNodes", "2:2:10",
-                    "--threads", "30",
-                    "--rand", "60",
-                    //"--seeds", "/home/vignati/NS3/graphs/summary/5G-Scenario2-rand60.txt",
-                    "-P",
-                    "--traffic",
-                    //"--dry",
-                    //"-f"
-                    "--path", "4G-scenario1-Shadowing-ON",
-                    "--no-wait",
-                    ],
+            "justMyCode": true,
+            "args": [
+                "--dont-limit-packets",
+                "--run-simulations"
+            ]
+        },
+        {
+            "name": "Python: NS3Wrapper",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "args": [
+                "--gen",
+                "4G",
+                "--scenario",
+                "1",
+                "--radius",
+                "150",
+                "--height",
+                "1.5",
+                //"--num", "2",
+                //"--neNBs", "3",
+                "--limitPackets",
+                "--iterate",
+                "numberOfueNodes",
+                "2:2:10",
+                "--threads",
+                "30",
+                "--rand",
+                "60",
+                //"--seeds", "/home/vignati/NS3/graphs/summary/5G-Scenario2-rand60.txt",
+                "-P",
+                "--traffic",
+                //"--dry",
+                //"-f"
+                "--path",
+                "4G-scenario1-Shadowing-ON",
+                "--no-wait",
+            ],
         },
         {
             "name": "(gdb) Pipe Launch",
@@ -40,15 +61,16 @@
                 "--numberOfueNodes=2",
                 "--radius=150",
                 "--height=1.5",
-                "--seed=279",
-                "--simTime=7",
-                "--nPackets=9408",
+                "--seed=0",
+                "--simTime=26",
+                "--nPackets=37533",
                 "--interPacketInterval=0.0006666666666666666",
                 "--traffic",
-                "--generation=4G",
+                "--generation=5G",
                 "--numberOfenbNodes=1",
                 "--scenario=1",
-                "--numerology=2"
+                "--numerology=2",
+                "--path=5G-scenario1-num2"
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
