Big commit with many changes - The nr module is the latest commit on the 2.1.y branch with the   nr-2.1.y-vignati.patch patch applied. - New version of the NS3Pipelines module, now able to handle multiple   projects at the same time.
On 4G-5G_comparison:
- Added the ability to simulate 4G with the nr module (fourGwith5GLena).
- Added the ability to enable traces via a command line argument.
- Added the ability to specify the error model and the number of UEs per
  eNB via command line arguments.
- Added the ability to place eNBs very far from each other (e.g. 10 Km)
  as the scenario 3.
- Fixed an error with the radio configuration of 5G resulting in a
  reduced bandwidth for the uplink.
- Added debug capability to the UDP Mix Server application via macros.
- Fixed a bug on the oldestSeqN.
- Fixed a bug in the IoMusT server application.

Immersed-NMP:
- Build new simulation script from scratch for a new project. This
  script simulates remote immersed NMP over 5G using two different
  topologies.
- Added a new Broadcast Server application.
- Added a new UDP Mix Mec Server application.

--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,11 @@ cmake-build-release/
 .vscode/
 simLog.txt
 old-graphs/
+.neptune/
+tailscale_restart
+Immersed-NMP
 
 .vscode/*
 !.vscode/launch.json
 !.vscode/tasks.json
+!nr-2.1.y-vignati.patch
